# ComputationalPhysicsSU22

./: LICENCE  README.md
Project01-AlphaDecay/: CMakeLists.txt  Makefile  alpha.cpp  config.yaml  config_realistic.yaml  config_test.yaml  references.bib  report.md  visualize.py
Project01-AlphaDecay/include/utils/: NumpySaver.hpp
Project02-Eigenvalues/: CMakeLists.txt  Makefile  config.yaml  eigenvalues.cpp  report.md  test.yaml  visualize.py
Project02-Eigenvalues/include/utils/: NumpySaver.hpp
Project03-QuantumMC/: CMakeLists.txt  Makefile  Metropolis.cpp  Metropolis.hpp  conanfile.txt  quantummc.cpp  report.md  visualize.py
Project03-QuantumMC/include/utils/: Timer.hpp
Project04-BSplinesPoisson/: CMakeLists.txt  Makefile  bspline.hpp  bsplines.hpp  bsplinespoisson.cpp  config.yaml  matplotlibrc  report.md  test  test.cpp  visualize.py
Project04-BSplinesPoisson/include/utils/: YAMLUtils.hpp
Project05-BSplinesHAtom/: CMakeLists.txt  Makefile  bsplineshatom.cpp  conanfile.txt  config.yaml  report.md  visualize.py
Project06-PTE/: CMakeLists.txt  Makefile  bsplines.hpp  create_pse.py  matplotlibrc  pte.cpp  report.md  visualize.py
Project06-PTE/include/utils/: YAMLUtils.hpp
Project07-EarthsTemperature/: CMakeLists.txt  Makefile  conanfile.txt  earthstemperature.cpp  matplotlibrc  report.md  visualize.py
Project07-EarthsTemperature/include/utils/: NumpySaver.hpp
Project08-ImageFourierTransform/: --log  .gitignore  CMakeLists.txt  Makefile  conanfile.txt  fft.hpp  fft_all_images.bash  header.tex  image_fft.hpp  imagefouriertransform.cpp  img_dct.cpp  img_dft.cpp  img_idct.cpp  matplotlibrc  presentation.tex  references.bib  report.md  report.tex  visualize.py
Project08-ImageFourierTransform/images/: dune.webm
Project08-ImageFourierTransform/include/utils/: Timer.hpp
Project08-ImageFourierTransform/presentation/: intro.tex  results.tex
Project08-ImageFourierTransform/report/: introduction.tex  remarks.tex  results.tex
Template/: CMakeLists.txt  Makefile  config.yaml  report.md  template.cpp  test.cpp
Template/include/utils/: NumpySaver.hpp
